All 4 parts added

--- a/little-lemon-coursera/public/index.html
+++ b/little-lemon-coursera/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content="Little Lemon - A cozy and delightful restaurant serving fresh and delicious meals made with love. Explore our menu, book a table, or order online for a delightful dining experience." />
+
+<!-- Open Graph Meta Tags -->
+<meta name="og:title" content="Little Lemon Restaurant" />
+<meta name="og:description" content="Welcome to Little Lemon! Experience the finest dining with a wide range of delicious meals and desserts. Perfect for family dinners, dates, or celebrations!" />
+<meta name="og:image" content="./src/assets/little-lemon-logo.png" /> <!-- Replace with your actual image URL -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
